# salestracking

./: .gitignore  gitguide.md  gitguide.txt  index.html  migrationchecklist.md  package-lock.json  package.json  sales_tracking schema pdf.docx  tsconfig.json  vite.config.ts  ~$les_tracking schema pdf.docx
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/database/: db.rs  incentives.rs  mod.rs  product.rs  sales.rs  salesperson.rs  schema.rs
src/helpers/: dataHelper.ts
src/model/: api.ts  incentives.ts  products.ts  sales.ts
src/router/: index.ts
src/store/: shared.ts
src/views/: CampaignProgressView.vue  ProductDetailView.vue  ProductsView.vue  SalesentryView.vue  SalespersonView.vue  TargetCampaignView.vue
